conic-gradient 锥形渐变

--- a/src/css/css.html
+++ b/src/css/css.html
@@ -76,7 +76,7 @@
         border-top: 1px solid #ccc;
       }
     </style>
-    <div style="height: 300px; overflow-y: auto;">
+    <div style="height: 300px; overflow-y: auto">
       <dl>
         <dt>A</dt>
         <dd>Andrew W.K.</dd>
@@ -106,5 +106,13 @@
         <dd>Two Gallants</dd>
       </dl>
     </div>
+
+    <!-- flex 简易居中 -->
+    <div style="width: 200px; height: 200px; display: flex; background-color: peru">
+      <div style="width: 20px; height: 20px; background-color: aqua; margin: auto"></div>
+    </div>
+
+    <!-- 角向渐变 -->
+    <div style="width: 100px; height: 100px; border-radius: 50%; background: conic-gradient(red 0 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80% 100%);"></div>
   </body>
 </html>
