--- a/src/css/css.html
+++ b/src/css/css.html
@@ -112,7 +112,73 @@
       <div style="width: 20px; height: 20px; background-color: aqua; margin: auto"></div>
     </div>
 
-    <!-- 角向渐变 -->
-    <div style="width: 100px; height: 100px; border-radius: 50%; background: conic-gradient(red 0 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80% 100%);"></div>
+    <!-- 锥形渐变 -->
+    <div style="width: 100px; height: 100px; border-radius: 50%; background: conic-gradient(red 0 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80% 100%)"></div>
+    <!-- 拾色器 -->
+    <style>
+      .colors {
+        width: 200px;
+        height: 200px;
+        background: conic-gradient(
+          red,
+          #ff4d00,
+          #ff9900,
+          #ffe600,
+          #ccff00,
+          #80ff00,
+          #33ff00,
+          #00ff1a,
+          #00ff66,
+          #00ffb3,
+          cyan,
+          #00b3ff,
+          #0066ff,
+          #001aff,
+          #3300ff,
+          #8000ff,
+          #cc00ff,
+          #ff00e6,
+          #ff0099,
+          #ff004d,
+          red
+        );
+        border-radius: 50%;
+      }
+    </style>
+    <div class="colors"></div>
+
+    <!-- 重复锥形渐变  -->
+    <div style="width: 100px; height: 100px; border-radius: 50%; background: repeating-conic-gradient(red 0 15deg, orange 0 30deg, yellow 0 45deg)"></div>
+
+    <!-- css 控制动画停止 -->
+    <style>
+      @keyframes rotate {
+        from {
+          transform: rotate(0);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+      .animation {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background: repeating-conic-gradient(red 0 15deg, orange 0 30deg, yellow 0 45deg);
+        animation: rotate 1s linear infinite;
+        cursor: pointer;
+      }
+      .animation:hover {
+        animation-play-state: paused;
+      }
+    </style>
+    <div class="animation"></div>
+
+    <!-- css 滤镜虚化 -->
+    <style>
+      .animation:hover {
+        filter: blur(2px);
+      }
+    </style>
   </body>
 </html>
